--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>NavPanel.qml</file>
+        <file>PressButton.qml</file>
     </qresource>
 </RCC>
