--- a/qml.qrc
+++ b/qml.qrc
@@ -6,6 +6,7 @@
         <file>MTabButton.qml</file>
         <file>images/settings.png</file>
         <file>images/plus.png</file>
-        <file>ContentBox.qml</file>
+        <file>ManageBlock.qml</file>
+        <file>MContainer.qml</file>
     </qresource>
 </RCC>
