--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>images/plus.png</file>
         <file>ManageBlock.qml</file>
         <file>MContainer.qml</file>
+		<file>ContentBox.qml</file>
     </qresource>
 </RCC>
