Add movable object in qml

--- a/qml.qrc
+++ b/qml.qrc
@@ -8,6 +8,7 @@
         <file>images/plus.png</file>
         <file>ManageBlock.qml</file>
         <file>MContainer.qml</file>
-		<file>ContentBox.qml</file>
+        <file>ContentBox.qml</file>
+        <file>Ship.qml</file>
     </qresource>
 </RCC>
